# dvd

./: .editorconfig  .env.example  .gitignore  LICENSE.txt  Makefile  README.md  compose.yaml  compose.yml  dvd  requirements.txt
.github/workflows/: engine.yaml  unpack.yaml  viewer.yaml
docker/nginx/: engine.conf  gzip.conf
engine/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __main__.py  api.py  main.py  pyproject.toml  requirements.txt  util.py  view.py
engine/docker/: start.sh  wdcli.sh
engine/engine/: __main__.py  api.py  app.py  args.py  image.py  lib.py  main.py  mixins.py  rest.py  scaling.py  search.py  singleflight.py  storage.py  types.py  unpack.py  util.py  view.py
engine/tests/: test_api.py  test_image.py  test_scaling.py  test_search.py  test_singleflight.py  test_view.py  util.py
unpack/: CMakeLists.txt  Dockerfile  Makefile  README.md
unpack/src/: exception.cpp  exception.hpp  format.cpp  format.hpp  global.cpp  global.hpp  local.cpp  main.cpp  stream.cpp  stream.cxx  stream.hpp  stream.hxx  stream_file.cxx  stream_file.hxx  stream_http.cxx  stream_http.hxx  text.cpp  text.hpp  types.hpp  unpack.cpp  unpack.cxx  unpack.hpp  unpack.hxx
viewer/: .babelrc  .eslintrc.yaml  .gitignore  .prettierrc.yaml  Dockerfile  Makefile  README.md  eslint.config.js  jest.config.json  jest.config.ts  jsdom-fetch.mjs  module-to-cdn.d.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.mjs  vite.config.ts  vitest.setup.ts  webpack.config.babel.js  webpack.config.babel.ts  webpack.config.ts
viewer/assets/: pwa.webmanifest
viewer/mocks/: comic.ts  filesystem.ts  queue.ts  search.ts  utils.ts  video.ts
viewer/src/: app.css  app.html  index.css  index.ejs  index.jsx  index.scss  index.tsx  manifest.json  patch.d.ts  svelte.d.ts
viewer/src/html/: index.html
viewer/src/lib/: _index.scss  api.ts  common.ts  hooks.tsx  index.js  index.jsx  index.ts  index.tsx  lock.ts  mocks.ts  queue.ts  storage.ts  styles.ts
viewer/src/lib/__tests__/: api.ts  hooks.tsx  lock.ts  queue.ts  storage.ts  styles.ts
viewer/src/lib/actions/: dragdrop.ts  event.ts  image.ts  input.ts  observer.ts
viewer/src/lib/mocks/: comic.ts  filesystem.ts  queue.ts  search.ts  utils.ts  video.ts
viewer/src/lib/stores/: comic.spec.ts  comic.ts  disabled.ts  dragdrop.spec.ts  dragdrop.ts  filesystem.spec.ts  filesystem.ts  fullscreen.spec.ts  fullscreen.ts  idset.spec.ts  idset.ts  queue.spec.ts  queue.ts  search.spec.ts  search.ts  selection.spec.ts  selection.ts  shortcut.spec.ts  shortcut.ts  sort.spec.ts  sort.ts  video.spec.ts  video.ts
viewer/src/lib/tools/: ajax.ts  api.ts  external.ts  filesystem.spec.ts  filesystem.ts  fp.ts  functional.ts  lock.spec.ts  lock.ts  logging.ts  queue.spec.ts  queue.ts  storage.spec.ts  storage.ts  (+1 more)
viewer/src/routes/: +layout.svelte  __layout.svelte  index.svelte
viewer/src/states/: actions.js  actions.ts  reducers.js  reducers.ts  selectors.js  selectors.ts
viewer/src/views/: application.jsx  application.scss  application.tsx  button.jsx  button.scss  button.tsx  content_action_bar.jsx  content_action_bar.scss  content_action_bar.tsx  double_tree_view.jsx  double_tree_view.scss  dragdrop.jsx  dragdrop.scss  dragdrop.tsx  expandable.jsx  file_explorer.jsx  file_explorer.scss  file_explorer.tsx  file_system_action_bar.jsx  file_system_action_bar.scss  file_system_action_bar.tsx  image_view.tsx  input.jsx  input.tsx  multipage_view.jsx  multipage_view.tsx  mutex_view.jsx  search_list.jsx  search_list.scss  search_view.jsx  search_view.scss  search_view.tsx  selectable.jsx  selectable.tsx  settings_view.jsx  settings_view.tsx  single_tree_view.jsx  single_tree_view.scss  site_map.tsx  sort_action_bar.tsx  (+9 more)
viewer/static/: pwa.webmanifest
viewer/tests/: lib.ts
viewer/tests/stores/: comic.spec.ts  dragdrop.spec.ts  filesystem.spec.ts  fullscreen.spec.ts  idset.spec.ts  queue.spec.ts  search.spec.ts  shortcut.spec.ts  sort.spec.ts  video.spec.ts
viewer/tests/tools/: filesystem.spec.ts  lock.spec.ts  queue.spec.ts  storage.spec.ts  string.spec.ts
viewer/tools/: cdn_webpack_plugin.js  cdn_webpack_plugin.ts
(+306 files in other folders)
