[project]
name = "engine"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.13.2,<4.0.0",
    "wcpan-drive-crypt>=5.0.1,<6.0.0",
    "wcpan-drive-google>=10.0.1,<11.0.0",
    "wcpan-watchdog>=1.0.0,<2.0.0",
    "wcpan-drive-cli>=4.0.2,<5.0.0",
    "wcpan-logging>=2.1.0,<3.0.0",
    "wcpan-drive-sqlite>=3.0.0,<4.0.0",
    "pillow>=12.0.0,<13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10,<1.0.0",
]

[tool.uv]
package = false
